fix video-img on mobile

--- a/sass/blocks/about-us.scss
+++ b/sass/blocks/about-us.scss
@@ -2,7 +2,13 @@
 	padding: 0;
 	margin: 0;
 }
+.about-us {
+	position: relative;
+	    background-image: url(../img/bg-zigzag-line.svg);
+    background-repeat: repeat-x;
+    background-position: 16px 0px;
 
+}
 .about-us__wrapper {
 	@include container;
 	padding: 0 30px;
@@ -123,11 +129,11 @@
 
 @media #{$desktop-widths} {
 	.about-us {
-		padding-top: 56px;
-		background-image: url("../img/bg-zigzag-line.svg");
-		background-repeat: repeat-x;
-		background-position: 0px 1175px;
-		padding-bottom: 39px;
+		    padding-top: 84px;
+    background-image: url(../img/bg-zigzag-line.svg);
+    background-repeat: repeat-x;
+    background-position: 16px 0px;
+    padding-bottom: 39px;
 	}
 	.about-us__title {
 		@include heading-h1-desktop;
