--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -5,19 +5,35 @@
 	padding-bottom: 45px;
 	position: fixed;
 	z-index: 100;
-	display: none;
+
 	top: 50vh;
 	left: 50%;
 	margin-top: -170px;
 	margin-left: -160px;
-	width: 320px;
+		width: 100%;
+
 	padding-top: 35px;
 	padding-bottom: 47px;
 	background-color: #ffffff;
 }
+.modal-section {
+
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(255, 255, 255, 0.8);
+
+}
 .modal-open{
 	display: block;
+
 }
+
 
 .modal b {
 	font-weight: 700;
