--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,6 +1,19 @@
 .reviews {
 	@include container;
-	padding: 0 30px
+	padding: 0 30px;
+	&::before {
+		content: "";
+		position: absolute;
+		background-image: url(../img/bg-zigzag-line.svg);
+		background-position: 0 0px;
+		background-repeat: repeat-x;
+		background-size: contain;
+		min-height: 21px;
+		z-index: 100;
+		width: 100%;
+		left: 0;
+		margin-top: 445px;
+	}
 }
 
 .reviews__title {
