--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
 @import "blocks/container.scss";
 @import "blocks/copyright.scss";
 @import "blocks/featured-item.scss";
+@import "global/fonts.scss";
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
 @import "blocks/index-catalog.scss";
@@ -35,7 +36,10 @@ html {
 	box-sizing: border-box;
 }
 
-
+iframe {
+		@include container;
+	padding: 0 30px;
+}
 /**{
 	outline: 1px solid red;
 }*/
@@ -52,10 +56,18 @@ html {
 	.zigzag {
 		min-height: 17px;
 	}
+	iframe {
+
+	padding: 0;
+}
 }
 
 @media #{$desktop-widths} {
 	.zigzag {
 		min-height: 23px;
+	}
+	iframe {
+		width: 100%;
+		height: 455px;
 	}
 }
